<resources>
    <string name="app_name">SAP_HealthCo</string>
    <string name="btn_1">স্বাস্থ্য  </string>
    <string name="btn_2">হাসপাতাল  </string>
    <string name="btn_3">ডাক্তার  </string>
    <string name="btn_4">জরুরী তথ্য  </string>
    <string name="tv_1"> রোগী কে ? </string>
    <string name="btn_5"> মহিলা </string>
    <string name="btn_6"> শিশু </string>
    <string name="tv_2"> রোগের লক্ষণ </string>
    <string name="tv_4"> সম্ভাব্য ব্যাধি</string>
    <string name="tv_3"> ডাক্তার লিস্ট </string>
    <string name="tv_5">হাসপাতাল লিস্ট </string>
    <string name="teammember">  প্রিমিয়ার বিশ্ববিদ্যালয়,চট্টগ্রাম \n\n১.আকিব হোসেন\n২.কাজী মাসুম\n৩.মোঃ মেজবা উদ্দিন আকিব\n\nজাতীয় বিশ্ববিদ্যালয়\n(চট্টগ্রাম সরকারি মহিলা কলেজ)\n\n
১.সৈয়দা ইফ্ফাত জাহান\n\nইস্ট ডেল্টা বিশ্ববিদ্যালয়\n\n১.মোঃ তানজিম উদ্দিন\n২.প্রশান্ত ভৌমিক\n৩.দিপ্ত বিশ্বাস\n\nআন্তর্জাতিক ইসলামি বিশ্ববিদ্যালয়,চট্টগ্রাম\n\n১.উম্মে ফাতেমা নাবিলা\n২.আসমা আকতার\n৩.মোঃ আলাউদ্দিন মাইলো\n৪.সামিল হাসান\n৫.শিহাব উদ্দিন\n৬.শাহানা আকতার ডলি\n৭.নাসরিন আকতার নিশি\n৮.মেহজাবিন বানু\n৯. সুমাইয়া আকতার\n১০.রৌসন জাহান মৌসি\n১১.কাজী মোহাম্মদ শফি উল্লাহ রাহাত\n\n




 </string>
    <string name="aboutus">হেলথ-কো এমন একটি স্বেচ্ছাধীন  দল যা একটি সুস্থ এবং সবল সমাজের স্বপ্ন বুনে/দেখে/ বিশ্বাস করে..

                    এটি তরুণ-তরুনীর একটি সম্মিলিত দল যা চিকিৎসক এবং রোগীর মাঝে সেতুবন্ধন করতে আপ্রাণ চেষ্টা করে যাচ্ছে...

          আমরা চেষ্টা করে যাচ্ছি রোগীরা যেন আরো বেশী ডাক্তারের সান্নিধ্যে আসতে পারেন এবং একই সাথে রোগীর যেন সুচিকিৎসা নিশ্চিত হয় সেদিকেও পর্যবেক্ষণ করছি....

এই অ্যাপস্ এ আপনি আপনার চিকিৎসকের সবধরণের তথ্যাবলী পাবেন...

এছাড়াও আমরা সুবিধাবঞ্চিতদের  জন্য "হেলথক্যাম্পস" এর ব্যবস্থা করি...

আমাদের পরিবারের একজন হতে কারণসহ মেইল করুন: health.co.1971@gmail.com</string>
    <!--Child related-->
    <!--MulNutrition Doctors-->
    <!-- <string-array name="mal_nu_doctor_name">
        <item>Doctor X</item>
        <item>Doctor y</item>
    </string-array>
    <string-array name="mal_nu_doctor_designation">
        <item>designation of doctor X</item>
        <item>designation of doctor y</item>
    </string-array>
    <string-array name="mal_nu_doctor_address">
        <item>Doctor X</item>
        <item>Ph: 619575</item>
    </string-array>
    <string-array name="mal_nu_doctor_phone">
        <item>Doctor X</item>
        <item>Ph: 619575</item>
    </string-array>-->

    <!--Dengue Doctor-->

</resources>
