<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_health"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.absjbd.sap_healthco.Activity.HealthActivity"
    android:background="@color/Pink">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_1"
        android:textSize="40sp"
        android:gravity="center"
        android:background="@color/litePink"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:background="@color/violate"
        android:alpha="0.9"
        android:weightSum="10"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent"
                android:src="@drawable/hijab"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/btn_5"
                android:onClick="FemaleBtnClick"
                android:id="@+id/fiveBt"
                android:textSize="30sp"
                android:background="@color/accent"/>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:orientation="horizontal"
        android:background="@color/violate"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:weightSum="10"
        android:alpha="0.9"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent">
            <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:src="@drawable/boy"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_6"
                android:onClick="ChildBtnClick"
                android:layout_gravity="center_vertical"
                android:id="@+id/sixBt"
                android:textSize="30sp"
                android:background="@color/accent"/>
        </LinearLayout>


    </LinearLayout>
    </LinearLayout>

</LinearLayout>
